# joana

./: .classpath  .gitignore  .gitmodules  .project  Doxyfile  OpenAPI.md  README  build.xml  build_openapi_stuff  javac  joana-cleanup.xml  joana-code-style.xml  joana-codetemplates.xml  joana-default-java-header.txt  joana-deploy-secret.properties.editme  joana-formatter.xml  joana-project-location.properties  project.properties  run_server.sh  setup_deps  sourcify  testcli_frontend.py
.github/workflows/: ant.yml  remove-old-artifacts.yml
api/joana.api/: .classpath  .project  RunDemoIFC (possibilistic).launch  RunDemoIFC (probabilistic ex1-leak).launch  RunDemoIFC (probabilistic ex2-safe).launch  RunDemoIFC (sequential).launch  build.xml  project.properties
api/joana.api.annotations.ignore/: .classpath  .project
api/joana.api.annotations.passon/: .classpath  .project
api/joana.api.test/: .classpath  .project  build.xml  classpaths.properties  project.properties
api/joana.api.testdata/: .classpath  .project  build.xml
contrib/apktool/: .classpath  .project  build.properties
contrib/easyifc-demo-workspace/: .gitignore
contrib/kotlinc/: build.txt
contrib/lib/: .classpath  .project  README  approxmc  build.properties
contrib/www/: .htaccess  index.html  joana-graphviewer.jnlp  joana-ifcconsole.jnlp
deprecated/jSDG/: (joana.deprecated.jsdg) ConfigBuilder.launch  .classpath  .project  build.properties  build.xml  build_simple.xml  build_simple_slicer.xml
deprecated/jSDG-GUI/: .project  build.properties
doc/: DoxygenLayout.xml  README  convert_1.6_to-1.7.sh  convert_1.7_to-1.8.sh  customDoxy.css
example/joana.example.many-small-progs/: .project  build.xml  jSDG Tests - AlarmClock.launch  jSDG Tests - ConcPasswordFile.launch  jSDG Tests - DaisyTest.launch  jSDG Tests - DiningPhilosophers.launch  jSDG Tests - DiskSchedulerDriver.launch  jSDG Tests - EnvDriver.launch  jSDG Tests - ExceptionHandling.launch  jSDG Tests - ExceptionOptimize.launch  jSDG Tests - Extract.launch  jSDG Tests - Hammer.launch  jSDG Tests - HammerDistributed.launch  jSDG Tests - IndirectRecursiveThreads.launch  jSDG Tests - Knapsack.launch  jSDG Tests - LaplaceGrid.launch  jSDG Tests - Mantel00Page10.launch  jSDG Tests - PasswordFile.launch  jSDG Tests - ProbPasswordFile.launch  jSDG Tests - ProducerConsumer.launch  jSDG Tests - RecursiveThread.launch  jSDG Tests - SharedQueue.launch  jSDG Tests - Synchronization.launch  jSDG Tests - ThreadJoining.launch  jSDG Tests - ThreadSpawning.launch  jSDG Tests - TimeTravel.launch  jSDG Tests - dt.Main.launch  jSDG Tests - kk.Main.launch
example/joana.example.tiny-special-tests/: .project
example/output/: tests_JC_summary-tiny.txt  tests_JC_summary.txt  tests_JRE14_JavaGrande_summary-tiny.txt  tests_JRE14_summary.txt  tests_all_summary-tiny.txt
ifc/sdg/: build_apis
lib/: README
src/tests/: DanglingExceptionNodeTest.java  ORLSODExperiment.java  ORLSODExperimentTiming.java  TestConstraintBasedIFC.java
src/util/: Util.java
tools/: JLexMin.java  JLexMin2.java  Main.java  TinyExample.java  testcli_frontend.py
util/AndroidStubsBuilder/: README.md  Stubify.py  bank.ini  micro.ini  mini.ini  stubsBuilder  stubsBuilder.ini
util/SuSi2Joana/: README.md  build.properties  build.xml  project.properties
util/joana.util/: .project
util/joana.util.test/: .project
wala/joana.wala.core/: .project  build.xml
wala/joana.wala.dictionary/: (joana.wala.dictionary) CheckFlowLessMain.launch  .project  build.xml  file_structure.txt
wala/joana.wala.eval/: (joana.wala.eval) ExceptionTest.launch  (joana.wala.eval) RunEvalModular.launch  (joana.wala.eval) RunTestAccessPath.launch  (joana.wala.eval) RunTestModular.launch  .classpath  .project  HeavySlicingManager-deprecated-pdgs.launch  HeavySlicingManager-deprecated-pdgs_lazy.launch  HeavySlicingManager-junit-pdgs_eager.launch  HeavySlicingManager-junit-pdgs_lazy.launch  HeavySlicingManager-single-pdg.launch  HeavySlicingWorker-16gb.launch  HeavySlicingWorker-4gb.launch  HeavySlicingWorker-8gb.launch  RunHeavySlicing-deprecated-pdgs.launch  RunSummaryComputation-junit-pdgs.launch  (+18 more)
wala/joana.wala.eval-jmh/: .project  pom.xml
wala/joana.wala.eval.jmh/: .gitignore  .project  Makefile  README  pom.xml
wala/joana.wala.summary/cpp/: CMakeLists.txt  README.md  array_access.pg  build.sh  jlex.pg  main.cpp  mylist2.pg  prim_rec.pg  tiny.pg  worklist.hpp
wala/joana.wala.summary/cpp/tests/: CMakeLists.txt  CMakeLists.txt.in  worklist.cpp
(+3621 files in other folders)
